feat: TimeManager 추가 및 엔진 루프에 시간 시스템 통합
- DeltaTime 계산 기능 구현
- TimeScale 적용 및 Pause 기능 추가
- Unscaled/Scaled 누적 시간 관리 로직 추가
- FixedUpdate 지원을 위한 accumulator 로직 추가
- FPS 계산 기능 구현

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -51,6 +51,7 @@
     <ClInclude Include="Include\Engine\Resource\ResourceManager.h" />
     <ClInclude Include="Include\Engine\Resource\Texture\Texture.h" />
     <ClInclude Include="Include\Engine\Resource\ResourceType.h" />
+    <ClInclude Include="Include\Engine\System\TimeManager.h" />
     <ClInclude Include="Source\Engine\Core\EnginePCH.h" />
     <ClInclude Include="Include\Engine\Graphics\Command\DrawCommand.h" />
     <ClInclude Include="Include\Engine\Graphics\Command\CommandBuffer.h" />
@@ -105,6 +106,7 @@
     <ClCompile Include="Source\Engine\Resource\ResourceManager.cpp" />
     <ClCompile Include="Source\Engine\Resource\Texture\Texture.cpp" />
     <ClCompile Include="Source\Engine\System\InputManager.cpp" />
+    <ClCompile Include="Source\Engine\System\TimeManager.cpp" />
     <ClCompile Include="ThirdParty\DirectXTK\Src\DDSTextureLoader.cpp">
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">pch.h</PrecompiledHeaderFile>
       <PrecompiledHeaderOutputFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(IntDir)pch.pch</PrecompiledHeaderOutputFile>
