feat: UIActor 추가 및 ActorComponent 리팩토링
- UI 전용 Actor 타입(UIActor) 추가
- Actor::AddComponent 로직 확장: SceneComponent/RenderComponent 자동 Attach 처리

--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -146,11 +146,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Source\Actors\DemoActor.h" />
+    <ClInclude Include="Source\Actors\DemoUIActor.h" />
     <ClInclude Include="Source\ClientPCH\ClientPCH.h" />
     <ClInclude Include="Source\Levels\DemoLevel.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\Actors\DemoActor.cpp" />
+    <ClCompile Include="Source\Actors\DemoUIActor.cpp" />
     <ClCompile Include="Source\ClientPCH\ClientPCH.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">ClientPCH.h</PrecompiledHeaderFile>
