feat: SpritePivot 도입 및 스프라이트 Y축 좌표계 보정
- SpriteRendererComponent에 SpritePivot enum 추가 (Center, TopLeft 등 지원)
- SpriteMesh를 0~1 정규화 기반 버텍스로 변경하여 피벗 처리 구조 개선
- Y축 방향이 화면과 반대로 동작하던 문제 수정
- RenderWorld에서 Actor 위치의 Y 변위를 반전시켜 직교 투영 좌표계와 일관성 확보

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -97,6 +97,7 @@
     <ClInclude Include="Include\Engine\Graphics\PSO\GraphicsPSO.h" />
     <ClInclude Include="Include\Engine\Graphics\RenderStates.h" />
     <ClInclude Include="Include\Engine\Graphics\Render\GameLayer.h" />
+    <ClInclude Include="Include\Engine\Graphics\Render\SpritePivot.h" />
     <ClInclude Include="Include\Engine\Graphics\Vertex\SpriteVertex.h" />
     <ClInclude Include="Include\Engine\Resource\Resource.h" />
     <ClInclude Include="Include\Engine\Resource\ResourceManager.h" />
