--- a/Client/Client.vcxproj.filters
+++ b/Client/Client.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="Source\Actors\DemoUIActor.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Actors\DemoAnimationActor.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\ClientPCH\ClientPCH.cpp">
@@ -42,6 +45,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Source\Actors\DemoUIActor.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Actors\DemoAnimationActor.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
