--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -220,6 +220,9 @@
     <ClInclude Include="Include\Engine\Graphics\Animation\SpriteAnimationClip.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Include\Engine\Core\Component\FAttachmentTransformRules.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\Engine\Core\Engine.cpp">
@@ -328,6 +331,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Source\Engine\Core\Component\SpriteAnimatorComponent.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Engine\Core\Component\FAttachmentTransformRules.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
