--- a/Common/Common.vcxproj.filters
+++ b/Common/Common.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClInclude Include="Include\Common\Types.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Include\Common\Math\MathTypes.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
