feat: engine-wide 파일 로깅 시스템 추가
- Engine Core에 로그 시스템(LogSystem) 추가
- UE 스타일 매크로(SP_LOG) 기반 로그 출력 지원
- 콘솔 대신 파일(Saved/Logs/Shyplants.log)로 로그 기록

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -89,6 +89,11 @@
     <ClInclude Include="Include\Engine\Core\Engine.h" />
     <ClInclude Include="Include\Engine\Core\GameFramework\GameMode.h" />
     <ClInclude Include="Include\Engine\Core\GameFramework\GameState.h" />
+    <ClInclude Include="Include\Engine\Core\Log\LogCategories.h" />
+    <ClInclude Include="Include\Engine\Core\Log\LogCategory.h" />
+    <ClInclude Include="Include\Engine\Core\Log\LogLevel.h" />
+    <ClInclude Include="Include\Engine\Core\Log\LogMacros.h" />
+    <ClInclude Include="Include\Engine\Core\Log\LogSystem.h" />
     <ClInclude Include="Include\Engine\Core\World\Actor.h" />
     <ClInclude Include="Include\Engine\Core\Component\ActorComponent.h" />
     <ClInclude Include="Include\Engine\Core\World\Level.h" />
@@ -160,6 +165,10 @@
     <ClCompile Include="Source\Engine\Core\Component\TextRendererComponent.cpp" />
     <ClCompile Include="Source\Engine\Core\GameFramework\GameMode.cpp" />
     <ClCompile Include="Source\Engine\Core\GameFramework\GameState.cpp" />
+    <ClCompile Include="Source\Engine\Core\Log\LogSystem.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
+    </ClCompile>
     <ClCompile Include="Source\Engine\Core\World\Actor.cpp" />
     <ClCompile Include="Source\Engine\Core\Component\ActorComponent.cpp" />
     <ClCompile Include="Source\Engine\Core\World\Level.cpp" />
