feat: engine-wide Assert / Ensure / Fatal 매크로 추가
- SP_ASSERT, SP_ENSURE, SP_FATAL 매크로 도입
- Debug/Release 환경에 따른 에러 처리 정책 분리

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -76,6 +76,7 @@
     </FxCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Include\Engine\Core\Assert.h" />
     <ClInclude Include="Include\Engine\Core\Component\CameraComponent.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
