refactor: EngineMinimal.h 추가 및 엔진 공용 헤더 인터페이스 정리
- EngineMinimal.h 신규 추가
- Assert / Log 관련 엔진 공용 헤더 묶음 제공

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -101,6 +101,7 @@
     <ClInclude Include="Include\Engine\Core\World\UIActor.h" />
     <ClInclude Include="Include\Engine\Core\World\World.h" />
     <ClInclude Include="Include\Engine\Core\Component\SpriteRendererComponent.h" />
+    <ClInclude Include="Include\Engine\EngineMinimal.h" />
     <ClInclude Include="Include\Engine\Graphics\Animation\SpriteAnimationClip.h" />
     <ClInclude Include="Include\Engine\Graphics\ConstantBuffer\SpriteConstantBuffer.h" />
     <ClInclude Include="Include\Engine\Graphics\D3D11\D3D11Renderer.h" />
