feat: Pawn 도입 및 World/Level 생명주기 종료 구조 안정화
- 조종 가능한 Actor 추상화로 Pawn 클래스 추가
- PlayerController / GameMode와 Pawn 소유 및 제어 흐름 연동
- World::Shutdown 명시적 종료 단계 도입

--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -361,6 +361,9 @@
     <ClInclude Include="Include\Engine\Core\GameFramework\PlayerController.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Include\Engine\Core\GameFramework\Pawn.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\Engine\Core\Engine.cpp">
@@ -547,6 +550,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Source\Engine\Core\GameFramework\PlayerController.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Engine\Core\GameFramework\Pawn.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
