--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -94,6 +94,7 @@
     <ClInclude Include="Include\Engine\Core\Engine.h" />
     <ClInclude Include="Include\Engine\Core\GameFramework\GameMode.h" />
     <ClInclude Include="Include\Engine\Core\GameFramework\GameState.h" />
+    <ClInclude Include="Include\Engine\Core\GameFramework\Pawn.h" />
     <ClInclude Include="Include\Engine\Core\GameFramework\PlayerController.h" />
     <ClInclude Include="Include\Engine\Core\Log\LogCategories.h" />
     <ClInclude Include="Include\Engine\Core\Log\LogCategory.h" />
@@ -200,6 +201,9 @@
     <ClInclude Include="ThirdParty\DirectXTK\Src\SharedResourcePool.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Source\Engine\Core\GameFramework\Pawn.cpp">
+      <PrecompiledHeaderOutputFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(IntDir)\EnginePCH.pch</PrecompiledHeaderOutputFile>
+    </ClCompile>
     <ClCompile Include="Source\Engine\Core\GameFramework\PlayerController.cpp">
       <PrecompiledHeaderOutputFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(IntDir)\EnginePCH.pch</PrecompiledHeaderOutputFile>
     </ClCompile>
