feat: PersistentLevel / GameplayLevel 도입 및 World-Actor 생명주기 재구성
- Level 계층에 PersistentLevel / GameplayLevel 분리 도입
- World가 두 Level을 명시적으로 소유하도록 구조 변경
- Actor에 IsPersistentActor 정책 추가하여 Level 배치 규칙 명확화

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -105,7 +105,10 @@
     <ClInclude Include="Include\Engine\Core\Utils\StringUtils.h" />
     <ClInclude Include="Include\Engine\Core\World\Actor.h" />
     <ClInclude Include="Include\Engine\Core\Component\ActorComponent.h" />
+    <ClInclude Include="Include\Engine\Core\World\GameplayLevel.h" />
     <ClInclude Include="Include\Engine\Core\World\Level.h" />
+    <ClInclude Include="Include\Engine\Core\World\LevelTypes.h" />
+    <ClInclude Include="Include\Engine\Core\World\PersistentLevel.h" />
     <ClInclude Include="Include\Engine\Core\World\UIActor.h" />
     <ClInclude Include="Include\Engine\Core\World\World.h" />
     <ClInclude Include="Include\Engine\Core\Component\SpriteRendererComponent.h" />
