feat: GameModeBase 도입 및 싱글플레이 프레임워크 확장
- GameModeBase 추가: 엔진 중립 게임 모드 기반 계층 도입
- SinglePlayerGameMode 추가: 싱글플레이 전용 Pawn/Possession 정책 분리
- PlayerState 최소 스켈레톤 추가 (멀티플레이 대비)
- CameraActor 추가: PersistentLevel 소속 기본 카메라 액터 제공
- World/Engine 연동 수정: GameModeBase, CameraActor, PlayerState 동작 지원
- 기존 코드 수정: 새로운 게임 프레임워크 구성요소들이 정상 동작하도록 연결

--- a/Client/Client.vcxproj.filters
+++ b/Client/Client.vcxproj.filters
@@ -39,12 +39,18 @@
     <ClInclude Include="Source\Application\Win32Application.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Game\GameModes\DemoGameMode.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Client\ClientInit.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\ClientPCH\ClientPCH.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Source\Entry\main.cpp">
+    <ClCompile Include="Source\Client\ClientApp.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Source\Game\Levels\DemoLevel.cpp">
@@ -66,6 +72,12 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Source\Application\Win32Application.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Game\GameModes\DemoGameMode.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Client\ClientInit.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
