--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="Source\Application\Win32Application.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClInclude>
+    <ClInclude Include="Source\Client\ClientInit.h" />
     <ClInclude Include="Source\Game\GameBootstrap.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
     </ClInclude>
@@ -159,6 +160,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClInclude>
     <ClInclude Include="Source\ClientPCH\ClientPCH.h" />
+    <ClInclude Include="Source\Game\GameModes\DemoGameMode.h" />
     <ClInclude Include="Source\Game\Levels\DemoLevel.h" />
     <ClInclude Include="Source\Platform\Win32\Win32Window.h" />
   </ItemGroup>
@@ -166,6 +168,9 @@
     <ClCompile Include="Source\Application\Win32Application.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="Source\Client\ClientInit.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Source\Game\Actors\DemoActor.cpp" />
     <ClCompile Include="Source\Game\Actors\DemoAnimationActor.cpp">
@@ -178,7 +183,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">ClientPCH.h</PrecompiledHeaderFile>
     </ClCompile>
-    <ClCompile Include="Source\Entry\main.cpp">
+    <ClCompile Include="Source\Client\ClientApp.cpp">
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">ClientPCH/ClientPCH.h</PrecompiledHeaderFile>
       <PrecompiledHeaderOutputFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(IntDir)ClientPCH.pch</PrecompiledHeaderOutputFile>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
@@ -186,6 +191,7 @@
     <ClCompile Include="Source\Game\GameBootstrap.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="Source\Game\GameModes\DemoGameMode.cpp" />
     <ClCompile Include="Source\Game\Levels\DemoLevel.cpp" />
     <ClCompile Include="Source\Platform\Win32\Win32Window.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
